--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^3.9.0
   firebase_storage: ^10.3.8
   flutter_svg: ^1.1.5
+  camera: ^0.10.0+1
 
 dev_dependencies:
   flutter_test:
