--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_storage: ^10.3.8
   flutter_svg: ^1.1.5
   camera: ^0.10.0+1
+  image_picker:
+  video_player:
+  path_provider:
 
 dev_dependencies:
   flutter_test:
