--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   uuid: ^3.0.6
   intl: ^0.17.0
   flutter_staggered_grid_view: ^0.6.2
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
