--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   intl: ^0.17.0
   flutter_staggered_grid_view: ^0.6.2
   get: ^4.6.5
+  video_compress: ^3.1.1
+  mime: ^1.0.2
 
 dev_dependencies:
   flutter_test:
