--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,5 +74,6 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+//    implementation 'com.otaliastudios:transcoder:0.9.1'
     // implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
