--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   mime: ^1.0.2
   timeago: ^3.3.0
   chewie: ^1.4.0
+  flutter_sound: ^9.2.13
+  assets_audio_player: ^3.0.6
 
 dev_dependencies:
   flutter_test:
